--- a/NetLink.API/appsettings.json
+++ b/NetLink.API/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWT": {
+    "Secret": "G6b&4!qP@9sU#vXw&ZrTn2Lb$jVcKx%FpQm*R8zWc7aMvC!e5NsU9#x",
+    "Issuer": "NetLink",
+    "Audience": "Netlink",
+    "ExpirationInMinutes": 60
+  },
   "AllowedHosts": "*"
 }
